--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "jquery": "^3.1.1",
-    "vue": "^2.5.11"
+    "vue": "^2.5.11",
+    "vue-resource": "^1.0.3",
+    "vue-router": "^2.1.1"
   },
   "browserslist": [
     "> 1%",
