--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "jquery": "^3.1.1",
     "vue": "^2.5.11",
     "vue-resource": "^1.0.3",
-    "vue-router": "^2.1.1"
+    "vue-router": "^2.1.1",
+    "vue-select": "^2.4.0"
   },
   "browserslist": [
     "> 1%",
